[package]
name = "znn-sdk-rust"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.96"
description = "Zenon SDK for Rust"
license = "MIT"
repository = "https://github.com/coinselor/znn-sdk-rust"
documentation = "https://docs.rs/znn-sdk-rust"
readme = "README.md"
keywords = ["zenon", "crypto", "nom", "network-of-momentum", "znn"]
categories = ["cryptography"]
exclude = [
    ".github/**",
    ".gitignore",
    "deny.toml",
    "rust-toolchain.toml",
    "rustfmt.toml",
    "status.json",
]

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
bech32 = "0.12.0"
bip39 = { version = "2.2.0", features = ["rand"] }
const-hex = "1.19.1"
ed25519-dalek = "2.2.0"
hmac = "0.12.1"
num-bigint = "0.4.6"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }

# Optional platform-specific dependencies.
# Host randomness.
getrandom = { version = "0.2.16", optional = true }
# WebSocket JSON-RPC transport.
jsonrpsee = { version = "0.26", default-features = false, optional = true, features = [
    "async-client",
    "http-client",
    "ws-client",
    "server",
] }
# Async runtime for the ws client.
tokio = { version = "1.52.3", features = ["time", "sync"], optional = true }

[features]
# Full SDK surface.
default = ["client-ws", "wallet-fs", "native-pow"]
# WebSocket transport and SDK entry-point APIs.
client-ws = ["dep:jsonrpsee", "dep:tokio"]
# Filesystem wallet helpers.
wallet-fs = ["dep:getrandom"]
# Native proof-of-work search.
native-pow = ["dep:getrandom"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "sync"] }
trybuild = "1.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
indexing_slicing = "warn"
enum_glob_use = "deny"
